--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
     "env": {
         "browser": true,
+        "node": true,
         "es6": true
+    },
+    "ecmaFeatures": {
+        "modules": true,
+        "jsx": true
     },
     "globals": {
         "ENV": false
