--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "firebase": "^4.6.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^4.0.0",
@@ -11,6 +12,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "pump": "^1.0.2",
+    "puppeteer": "^0.12.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-typescript": "^0.8.1",
     "uglifyjs": "^2.4.10"
