--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
+    "gulp-util": "^3.0.8",
     "pump": "^1.0.2",
     "puppeteer": "^0.12.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-typescript": "^0.8.1",
-    "uglifyjs": "^2.4.10"
+    "uglifyjs": "^2.4.10",
+    "webpack-dev-server": "^2.9.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.3",
