--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 !node_modules/
 node_modules/*
 !node_modules/react/
-node_modules/react/*
+!node_modules/react-dom/
 
 # Source maps
 /dist/**/*.map
