--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^2.9.3"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "awesome-typescript-loader": "^3.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "gulp-rollup": "^2.15.0",
